--- a/医院挂号平台/index.html
+++ b/医院挂号平台/index.html
@@ -43,7 +43,57 @@
         <div class="nav-menu">
             <div class="wrap">
                 <div class="link menu">全部科室
-                    <div class="menu-list"></div>
+                    <div class="menu-list ui-menu">
+                        <div class="ui-menu-item clearfix">
+                            <a href="#" class="ui-menu-item-department">内科</a>
+                            <a href="#"class="ui-menu-item-disease">高血压</a>
+                            <a href="#"class="ui-menu-item-disease">冠心病</a>
+                            <div class="ui-menu-item-detail">
+                                <div class="ui-menu-item-detail-group">
+                                    <div class="ui-menu-item-detail-group-caption">
+                                        内科
+                                    </div>
+                                    <div class="ui-menu-item-detail-group-list">
+                                        <a href="#">心脑血管科</a>
+                                        <a href="#">神经内科</a>
+                                        <a href="#">内分泌科</a>
+                                        <a href="#">血液科</a>
+                                        <a href="#">心脑血管科</a>
+                                        <a href="#">神经内科</a>
+                                        <a href="#">内分泌科</a>
+                                        <a href="#">血液科</a>
+                                        <a href="#">心脑血管科</a>
+                                        <a href="#">神经内科</a>
+                                        <a href="#">内分泌科</a>
+                                        <a href="#">血液科</a>
+                                        <a href="#">心脑血管科</a>
+                                        <a href="#">神经内科</a>
+                                    </div>
+                                </div>
+                                <div class="ui-menu-item-detail-group">
+                                    <div class="ui-menu-item-detail-group-caption">
+                                        内科
+                                    </div>
+                                    <div class="ui-menu-item-detail-group-list">
+                                        <a href="#">心脑血管科</a>
+                                        <a href="#">神经内科</a>
+                                        <a href="#">内分泌科</a>
+                                        <a href="#">血液科</a>
+                                        <a href="#">心脑血管科</a>
+                                        <a href="#">神经内科</a>
+                                        <a href="#">内分泌科</a>
+                                        <a href="#">血液科</a>
+                                        <a href="#">心脑血管科</a>
+                                        <a href="#">神经内科</a>
+                                        <a href="#">内分泌科</a>
+                                        <a href="#">血液科</a>
+                                        <a href="#">心脑血管科</a>
+                                        <a href="#">神经内科</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <a href="#" class="link">按医院挂号</a>
                 <a href="#" class="link">按科室挂号</a>
@@ -54,7 +104,22 @@
         </div>
     </div>
     <div class="banner clearfix">
-        <div class="banner-slider"></div>
+        <div class="banner-slider ui-slider">
+            <div class="ui-slider-wrap">
+                <a href="#0" class="item"><img src="img/banner_1.jpg" alt=""></a>
+                <a href="#1" class="item"><img src="img/banner_2.jpg" alt=""></a>
+                <a href="#2" class="item"><img src="img/banner_3.jpg" alt=""></a>
+            </div>
+            <div class="ui-slider-arrow">
+                <a href="#left" class="item left">&nbsp;</a>
+                <a href="#right" class="item right">&nbsp;</a>
+            </div>
+            <div class="ui-slider-process">
+                <a href="#0" class="item item_focus">&nbsp;</a>
+                <a href="#1" class="item">&nbsp;</a>
+                <a href="#2" class="item">&nbsp;</a>
+            </div>
+        </div>
         <div class="banner-search">
             <div class="caption">快速预约</div>
             <div class="form">
@@ -86,62 +151,65 @@
         </div>
     </div>
     <div class="content clearfix">
-        <div class="tab">
+        <div class="tab ui-tab">
             <div class="caption">
-                <a href="#" class="item item_focus">医院</a>
-                <a href="#" class="item">科室</a>
+                <a href="#1" class="item item_focus">医院</a>
+                <a href="#2" class="item">科室</a>
             </div>
             <div class="block">
                 <div class="item">
                     <div class="block-caption">
-                        <a href="" class="block-caption-item block-caption-item_focus">全部</a>
-                        <a href="" class="block-caption-item">东城区</a>
-                        <a href="" class="block-caption-item">西城区</a>
-                        <a href="" class="block-caption-item">朝阳区</a>
-                        <a href="" class="block-caption-item">丰台区</a>
-                        <a href="" class="block-caption-item">石景山区</a>
-                        <a href="" class="block-caption-item">海淀区</a>
-                        <a href="" class="block-caption-item">门头沟区</a>
-                        <a href="" class="block-caption-item">房山区</a>
-                        <a href="" class="block-caption-item">其他</a>
+                        <a href="#3" class="block-caption-item block-caption-item_focus">全部</a>
+                        <a href="#4" class="block-caption-item">东城区</a>
+                        <a href="#5" class="block-caption-item">西城区</a>
+                        <a href="#6" class="block-caption-item">朝阳区</a>
+                        <a href="#7" class="block-caption-item">丰台区</a>
+                        <a href="#8" class="block-caption-item">石景山区</a>
+                        <a href="#9" class="block-caption-item">海淀区</a>
+                        <a href="#10" class="block-caption-item">门头沟区</a>
+                        <a href="#11" class="block-caption-item">房山区</a>
+                        <a href="#12" class="block-caption-item">其他</a>
                     </div>
                     <div class="block-content">
-                        <div class="block-list clearfix">
-                            <div class="item">
-                                <img src="img/hospital.jpg" alt="hospital">
-                                <div class="item-name">北京协和医院<span class="item-level">【三级甲等】</span></div>
-                                <div class="item-phone">电话：东院咨询台：010-69155564..</div>
-                                <div class="item-dress">北京市东城区帅府园一号 [西院]北京市西城区大木仓...</div>
+                        <div class="block-wrap">
+                            <div class="block-list clearfix">
+                                <div class="item">
+                                    <img src="img/hospital.jpg" alt="hospital">
+                                    <div class="item-name">北京协和医院<span class="item-level">【三级甲等】</span></div>
+                                    <div class="item-phone">电话：东院咨询台：010-69155564..</div>
+                                    <div class="item-dress">北京市东城区帅府园一号 [西院]北京市西城区大木仓...</div>
+                                </div>
+                                <div class="item">
+                                    <img src="img/hospital.jpg" alt="hospital">
+                                    <div class="item-name">北京协和医院<span class="item-level">【三级甲等】</span></div>
+                                    <div class="item-phone">电话：东院咨询台：010-69155564..</div>
+                                    <div class="item-dress">北京市东城区帅府园一号 [西院]北京市西城区大木仓...</div>
+                                </div>
+                                <div class="item">
+                                    <img src="img/hospital.jpg" alt="hospital">
+                                    <div class="item-name">北京协和医院<span class="item-level">【三级甲等】</span></div>
+                                    <div class="item-phone">电话：东院咨询台：010-69155564..</div>
+                                    <div class="item-dress">北京市东城区帅府园一号 [西院]北京市西城区大木仓...</div>
+                                </div>
+                                <div class="item">
+                                    <img src="img/hospital.jpg" alt="hospital">
+                                    <div class="item-name">北京协和医院<span class="item-level">【三级甲等】</span></div>
+                                    <div class="item-phone">电话：东院咨询台：010-69155564..</div>
+                                    <div class="item-dress">北京市东城区帅府园一号 [西院]北京市西城区大木仓...</div>
+                                </div>
+                            
                             </div>
-                            <div class="item">
-                                <img src="img/hospital.jpg" alt="hospital">
-                                <div class="item-name">北京协和医院<span class="item-level">【三级甲等】</span></div>
-                                <div class="item-phone">电话：东院咨询台：010-69155564..</div>
-                                <div class="item-dress">北京市东城区帅府园一号 [西院]北京市西城区大木仓...</div>
+                            <div class="block-text-list clearfix">
+                                <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
+                                <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
+                                <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
+                                <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
+                                <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
+                                <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
                             </div>
-                            <div class="item">
-                                <img src="img/hospital.jpg" alt="hospital">
-                                <div class="item-name">北京协和医院<span class="item-level">【三级甲等】</span></div>
-                                <div class="item-phone">电话：东院咨询台：010-69155564..</div>
-                                <div class="item-dress">北京市东城区帅府园一号 [西院]北京市西城区大木仓...</div>
-                            </div>
-                            <div class="item">
-                                <img src="img/hospital.jpg" alt="hospital">
-                                <div class="item-name">北京协和医院<span class="item-level">【三级甲等】</span></div>
-                                <div class="item-phone">电话：东院咨询台：010-69155564..</div>
-                                <div class="item-dress">北京市东城区帅府园一号 [西院]北京市西城区大木仓...</div>
-                            </div>
-
+                            <a href="#" class="block-more">更多医院</a>
                         </div>
-                        <div class="block-text-list clearfix">
-                            <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
-                            <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
-                            <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
-                            <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
-                            <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
-                            <a class="item" href="#">首都儿科研究所附属儿童医院<span class="level">【三级甲等】</span></a>
-                        </div>
-                        <a href="#" class="block-more">更多医院</a>
+                        <div class="block-wrap" style="display: none;">其他城区内容</div>
                     </div>
                 </div>
                 <div class="item" style="display: none;">
