--- a/mutao/index.html
+++ b/mutao/index.html
@@ -263,12 +263,76 @@
         </div>
     </div>
     <div class="banner">
-        <img src="img/banner/1.jpg" alt="">
-        <img src="img/banner/2.jpg" alt="">
-        <img src="img/banner/3.jpg" alt="">
-        <img src="img/banner/4.jpg" alt="">
-        <img src="img/banner/5.jpg" alt="">
-        <img src="img/banner/6.jpg" alt="">
+        <div class="container clearfix">
+            <div class="banner-img">
+                <img src="img/banner/1.jpg" alt="">
+                <img src="img/banner/2.jpg" alt="">
+                <img src="img/banner/3.jpg" alt="">
+                <img src="img/banner/4.jpg" alt="">
+                <img src="img/banner/5.jpg" alt="">
+                <img src="img/banner/6.jpg" alt="">
+            </div>
+            <div class="banner-sidebar">
+                <div class="sidebar">
+                    <div class="news">
+                        <div class="news-header">
+                            <div class="news-title"><a href="#">快报</a></div>
+                            <div class="news-more"><a href="#">更多</a></div>
+                        </div>
+                        <div class="news-list">
+                            <ul>
+                                <li>【特惠】精选图书满150减60</li>
+                                <li>【公告】因广州图书仓库升级配送延迟</li>
+                                <li>【特惠】爆款手机12期免息 抽奖赢电视</li>
+                                <li>【公告】广州、福建受台风影响配送延迟</li>
+                                <li>【特惠】大闸蟹领券满399减180</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="serve">
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/1.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/2.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/3.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/4.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/5.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/6.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/7.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/8.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/9.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/10.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/11.png" alt=""></a>
+                        </div>
+                        <div class="serve-item">
+                            <a href="#"><img src="img/icon/12.png" alt=""></a>
+                        </div>
+                    </div>
+                    <div class="ad">
+                        <img src="img/ad.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
     <script src="https://libs.cdnjs.net/jquery/1.10.0/jquery.js"></script>
     <script src="js/index.js"></script>
